fixed lat lon and centroids. updated map

--- a/ORF467-TripDistributionGenerator.ipynb
+++ b/ORF467-TripDistributionGenerator.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -311,7 +311,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "375073.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
        "[78 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,51 +767,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lat = np.linspace(37.67637961,37.90768039,num = 32)\n",
-    "lon = np.linspace(-122.5191224,-122.2878216, num = 32)\n",
-    "lat_step = (37.90768039-37.67637961) / 32.0\n",
-    "lon_step = (-122.2878216 - -122.5191224) / 32.0"
+    "lat = np.linspace(37.67637961,37.90768039,num = 31)\n",
+    "lon = np.linspace(-122.5191224,-122.2878216, num = 31)\n",
+    "lat_step = (37.90768039-37.67637961) / 31.0\n",
+    "lon_step = (-122.2878216 - -122.5191224) / 31.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3.66666667  3.          6.         17.15789474 20.42857143 23.5\n",
+      " 25.66666667 27.75       31.          7.         29.         31.\n",
+      " 32.          2.          7.5         9.375       1.          1.66666667\n",
+      "  3.          3.          4.          7.         31.          1.\n",
+      "  3.4         7.5        27.          2.          5.         12.83333333\n",
+      " 21.          5.75       29.4        31.          2.2         7.\n",
+      "  5.         31.05882353 31.83333333  2.          2.21153846  6.\n",
+      " 28.75       24.         26.8         6.14285714  9.15384615 15.42857143\n",
+      " 20.5        25.67005076 13.95652174 26.5        18.33333333 28.5\n",
+      " 30.          2.61538461 16.57142857 12.5        19.          5.6\n",
+      " 18.          6.4        10.38095238 17.09677419 10.61904762  4.47058824\n",
+      "  5.88888889 15.2        20.88888889  3.          6.         10.5625\n",
+      " 14.63636364 18.33333333  6.0625     14.5        15.66666667 17.625     ]\n",
+      "[ 1.88888889  1.          1.          7.49797571  1.28571429  1.\n",
+      "  1.33333333  1.25        1.          2.          4.5         3.\n",
+      "  6.          3.          3.5         5.          4.          4.66666667\n",
+      "  4.          5.          5.5         5.          6.5         8.\n",
+      "  8.1         6.          6.5         8.          7.          7.33333333\n",
+      "  7.          9.125       9.4         9.5        10.6        10.5\n",
+      " 11.         16.         13.16666667 12.         21.71153846 13.\n",
+      " 13.25       13.         13.6        15.28571429 16.51282051 14.57142857\n",
+      " 15.         24.58883249 18.7826087  16.         16.66666667 17.\n",
+      " 17.         19.84615385 18.14285714 18.         19.5        19.6\n",
+      " 19.         20.8        22.9047619  24.32258065 23.0952381  25.47058824\n",
+      " 23.33333333 22.4        24.22222222 24.5        27.8        29.625\n",
+      " 27.90909091 27.33333333 30.4375     29.5        30.83333333 30.75      ]\n"
+     ]
+    }
+   ],
    "source": [
     "#conversions\n",
     "lats = pd.to_numeric(df2.iloc[:, 4])\n",
     "lats = pd.Series(lats).to_numpy()-1\n",
-    "latitudes = 37.90768039 - lats * lat_step\n",
+    "latitudes = 37.90768039 - (lats) * lat_step\n",
     "lons = pd.to_numeric(df2.iloc[:, 3])\n",
     "lons = pd.Series(lons).to_numpy()-1\n",
-    "longitudes = lons * lon_step + -122.5191224\n"
+    "longitudes = (lons) * lon_step + -122.5191224\n",
+    "print(lats)\n",
+    "print(lons)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>37.880322</td>\n",
+       "      <td>-122.505029</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37.885296</td>\n",
+       "      <td>-122.511661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37.862912</td>\n",
+       "      <td>-122.511661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37.779660</td>\n",
+       "      <td>-122.463178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>37.755256</td>\n",
+       "      <td>-122.509529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>37.770890</td>\n",
+       "      <td>-122.315180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>37.862446</td>\n",
+       "      <td>-122.292019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>37.799491</td>\n",
+       "      <td>-122.299014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>37.790786</td>\n",
+       "      <td>-122.289065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>37.776175</td>\n",
+       "      <td>-122.289687</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>78 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(78, 2)"
+       "            0           1\n",
+       "0   37.880322 -122.505029\n",
+       "1   37.885296 -122.511661\n",
+       "2   37.862912 -122.511661\n",
+       "3   37.779660 -122.463178\n",
+       "4   37.755256 -122.509529\n",
+       "..        ...         ...\n",
+       "73  37.770890 -122.315180\n",
+       "74  37.862446 -122.292019\n",
+       "75  37.799491 -122.299014\n",
+       "76  37.790786 -122.289065\n",
+       "77  37.776175 -122.289687\n",
+       "\n",
+       "[78 rows x 2 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "coordinates = np.array([latitudes, longitudes])\n",
-    "np.shape(coordinates.T)\n"
+    "np.shape(coordinates.T)\n",
+    "coord = pd.DataFrame(coordinates.T)\n",
+    "coord.to_csv(\"coords.csv\")\n",
+    "coord\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
