time_varing_trip_dis_gen

--- a/ORF467-TrioDistributionGenerator_Production_and_Attraction_from_csv.ipynb
+++ b/ORF467-TrioDistributionGenerator_Production_and_Attraction_from_csv.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -259,6 +259,35 @@
       "   68.    0.  237.    0. 1258. 1152.    0.    0.  290.   53.    0.    0.\n",
       "  745.   79.  180.    0.   68.    0.]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 462.89448461,    0.        ,    0.        ,    0.        ,\n",
+       "        359.44314386,    0.        ,    0.        ,    0.        ,\n",
+       "          0.        ,    0.        ,    0.        ,    0.        ,\n",
+       "        461.67099765,    0.        ,    0.        ,  411.90688764,\n",
+       "          0.        ,    0.        ,    0.        ,    0.        ,\n",
+       "          0.        ,    0.        ,    0.        ,    0.        ,\n",
+       "        515.01767064,    0.        ,    0.        ,    0.        ,\n",
+       "          0.        ,  309.01012978,    0.        ,    0.        ,\n",
+       "        256.21529832,    0.        ,    0.        ,    0.        ,\n",
+       "          0.        ,  873.03643926,    0.        ,    0.        ,\n",
+       "          0.        ,    0.        ,    0.        ,    0.        ,\n",
+       "          0.        ,    0.        , 2008.45685024,    0.        ,\n",
+       "          0.        ,    0.        ,    0.        ,    0.        ,\n",
+       "          0.        ,  308.41713521,    0.        ,    0.        ,\n",
+       "          0.        ,    0.        ,    0.        ,    0.        ,\n",
+       "          0.        ,    0.        ,    0.        , 1596.34605064,\n",
+       "          0.        ,    0.        ,  463.59581258,    0.        ,\n",
+       "          0.        ,    0.        ,    0.        , 1648.98909957,\n",
+       "          0.        ,    0.        ,    0.        ,    0.        ,\n",
+       "          0.        ,    0.        ])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -304,7 +333,8 @@
     "T = calculate_T(A_star, P, D)\n",
     "\n",
     "print(T.sum(axis=0)) # should equal A\n",
-    "print(T.sum(axis=1)) # should equal P"
+    "print(T.sum(axis=1)) # should equal P\n",
+    "sum(T)"
    ]
   },
   {
@@ -345,8 +375,7 @@
    ],
    "source": [
     "print(T)\n",
-    "print(np.shape(T))\n",
-    "np.sum(T)"
+    "print(np.shape(T))"
    ]
   },
   {
